--- a/Vistas/winAltaItemPedido.xaml
+++ b/Vistas/winAltaItemPedido.xaml
@@ -34,7 +34,7 @@
             <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Width="237" />
 
 
-            <ListView Name="lvwArticulos" Grid.Column="1" Height="200" Background="Black" ItemsSource="{Binding Source={StaticResource list_articulos}}" Foreground="White" FontSize="10" HorizontalContentAlignment="Center" BorderBrush="Black" SelectionChanged="lvwArticulos_SelectionChanged">
+            <ListView Name="lvwArticulos" Grid.Column="1" Height="200" Background="Black" ItemsSource="{Binding Source={StaticResource list_articulos}}" IsSynchronizedWithCurrentItem="True" Foreground="White" FontSize="10" HorizontalContentAlignment="Center" BorderBrush="Black" SelectionChanged="lvwArticulos_SelectionChanged">
                 <ListView.View>
                     <GridView x:Name="gvwArticulos">
                         <GridViewColumn x:Name="id" Width="30" Header="ID" DisplayMemberBinding="{Binding Path=art_id}"/>
