--- a/Vistas/winArticulos.xaml
+++ b/Vistas/winArticulos.xaml
@@ -74,7 +74,7 @@
                         <Label HorizontalAlignment="Right" Content="Precio:" Name="label4" Grid.Row="4" Style="{StaticResource StyleLabelForm}" />
                             <Label HorizontalAlignment="Right" Content="Stock:" Name="label5" Grid.Row="5" Style="{StaticResource StyleLabelForm}"  />
                             <CheckBox Margin="6" HorizontalAlignment="Left" Name="chkStock" VerticalAlignment="Center" Grid.Row="5" Grid.Column="1" />
-                            <TextBox Width="120" Name="txtPrecio" VerticalAlignment="Center"  Grid.Column="1" Margin="5,0,0,0" Grid.Row="4" DataContext="{StaticResource Data_Articulo}" Style="{StaticResource EstiloError}">
+                            <TextBox Width="120" Name="txtPrecio" VerticalAlignment="Center"  Grid.Column="1" Margin="6,9,0,7" Grid.Row="4" DataContext="{StaticResource Data_Articulo}" Style="{StaticResource EstiloError}">
                                 <TextBox.Text>
                                     <Binding Path="Art_Precio" UpdateSourceTrigger="PropertyChanged"
                                  ValidatesOnExceptions="true" ValidatesOnDataErrors="true"></Binding>
@@ -115,8 +115,8 @@
                 </Grid>
             </Grid>
             
-            <ListView Name="lvwArticulos" Grid.Column="1" Height="200" Background="Black"
-                      ItemsSource="{Binding Source={StaticResource list_articulos}}" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black" Margin="0,155,25,156" >
+            <ListView Name="lvwArticulos" Height="200" Background="Black"
+                      ItemsSource="{Binding Source={StaticResource list_articulos}}" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black" Margin="359,155,1,156" Grid.ColumnSpan="2">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Width="30" Header="ID" DisplayMemberBinding="{Binding Path=art_id}"/>
@@ -126,6 +126,9 @@
                         <GridViewColumn Width="60" Header="Stock" DisplayMemberBinding="{Binding Path=art_stock}"/>
                         <GridViewColumn Width="90" Header="Familia" DisplayMemberBinding="{Binding Path=fam_descripcion}"/>
                         <GridViewColumn Width="90" Header="Categoria" DisplayMemberBinding="{Binding Path=cat_descripcion}"/>
+                        
+                            
+                        
                     </GridView>
                 </ListView.View>
             </ListView>
