--- a/Vistas/winPedidos.xaml
+++ b/Vistas/winPedidos.xaml
@@ -1,7 +1,9 @@
 ﻿<Window x:Class="Vistas.winPedidos"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      
         Title="winPedidos" Height="650" Width="auto"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
+   
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
@@ -50,22 +52,28 @@
                                 <RowDefinition Height="12*" />
                                 <RowDefinition Height="12*" />
                                 <RowDefinition Height="12*" />
-
+                                <RowDefinition Height="12*" />
                             </Grid.RowDefinitions>
 
                             <Label Name="lblNewArtTitle" Width="auto" Content="Nuevo Pedido" VerticalAlignment="Top" Margin="0,20,0,0" Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Height="50" />
-                            <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="53,0,43,7" Width="237" />
+                            <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Pedido" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="53,0,43,7" Width="237" />
 
                             <Label HorizontalAlignment="Right" Grid.Row="1" Content="Mesa:" Name="label2" Style="{StaticResource StyleLabelForm}" Margin="0,3,11,6" />
-                            <Label HorizontalAlignment="Right" Grid.Row="2" Content="Fecha y Hora:" Name="label3" Style="{StaticResource StyleLabelForm}" />
+                            <Label HorizontalAlignment="Right" Grid.Row="2" Content="Fecha de Entrega:" Name="label3" Style="{StaticResource StyleLabelForm}" />
                             <Label HorizontalAlignment="Right" Grid.Row="3" Content="Cliente:" Name="lblCategoria" Style="{StaticResource StyleLabelForm}" />
 
-                            <Label HorizontalAlignment="Right" Content="Ítems del Pedido:" Name="label4" Grid.Row="4" Style="{StaticResource StyleLabelForm}" Margin="0,6,10,0" />
-                            <ComboBox HorizontalAlignment="Left" Name="cboFlia" Grid.Column="1" Grid.Row="1" Margin="5,0" Height="23" Width="120"/>
+                            <Label HorizontalAlignment="Right" Content="Facturado" Name="label4" Grid.Row="4" Style="{StaticResource StyleLabelForm}" Margin="0,6,10,0" />
+                            <Label HorizontalAlignment="Right" Content="Comensales" Name="lblComensales" Grid.Row="5" Style="{StaticResource StyleLabelForm}" Margin="0,6,10,0" />
 
-                            <Label Grid.Column="1" HorizontalAlignment="Left" Grid.Row="2" Content="dd/mm/yyyy" Name="lblToday" Style="{StaticResource StyleLabelForm}" />
-                            <ComboBox Height="23" HorizontalAlignment="Left" Margin="5,0,0,0" Name="cboCategoria" VerticalAlignment="Center" Grid.Row="3" Grid.Column="1" BorderBrush="#FFE53535" Width="120" />
-                            <Button Name="btnAddItems" Content="Añadir Ítems" Grid.Column="1" Grid.Row="4" Height="23" HorizontalAlignment="Left" Margin="89,26,0,0" VerticalAlignment="Top" Width="75" Click="btnAddItems_Click" />
+                            <ComboBox HorizontalAlignment="Left" Name="cboMesas" Grid.Column="1" Grid.Row="1" Margin="5,0" Height="23" Width="120"/>
+
+                            
+                            <ComboBox Height="23" HorizontalAlignment="Left" Margin="5,0,0,0" Name="cboCliente" VerticalAlignment="Center" Grid.Row="3" Grid.Column="1"  Width="120" />
+                            <CheckBox Margin="69,23,0,10" HorizontalAlignment="Left" Name="chkFacturado" VerticalAlignment="Center" Grid.Row="4" Grid.Column="1" Height="32" Width="26" />
+                            <TextBox   Width="60" Name="txtComensal" VerticalAlignment="Center"  Grid.Column="1" Margin="52,21,0,17" Grid.Row="5" Style="{StaticResource EstiloError}">
+                                
+                            </TextBox>
+                            <DatePicker Grid.Column="1" Grid.Row="2" Height="25" HorizontalAlignment="Left"  Name="dpFecha" VerticalAlignment="Center" Width="115" Margin="10,22,0,17" />
                         </Grid>
 
                         <!--
@@ -79,20 +87,27 @@
 
                     <!-- grid botones-->
                     <Grid Margin="5" Grid.Row="2">
-                        <Button Name="btnagregarart" Grid.Column="0" Content="AÑADIR ARTÍCULO" Style="{StaticResource ButtonFormBlack}" Width="160" HorizontalAlignment="Center"></Button>
+                        <Button Name="btnagregarPed" Grid.Column="0" Content="AÑADIR ARTÍCULO" Style="{StaticResource ButtonFormBlack}" Width="160" HorizontalAlignment="Center" Click="btnagregarPed_Click"></Button>
                     </Grid>
                 </Grid>
 
-                <ListView Name="lvwArticulos" Grid.Column="1" Height="200" Background="Black" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black" Margin="0,155,25,156">
+                <ListView Name="lvwPedidos" Grid.Column="1" Height="200" Background="Black" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black" Margin="2,193,23,168">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Width="30" Header="ID" DisplayMemberBinding="{Binding Path=art_id}"/>
+                            <GridViewColumn Width="30" Header="ID" DisplayMemberBinding="{Binding Path=ped_id}"/>
                             <GridViewColumn Width="200" Header="Descripción" DisplayMemberBinding="{Binding Path=art_descripcion}"/>
                             <GridViewColumn Width="40" Header="UM" DisplayMemberBinding="{Binding Path=UM_abreviatura}"/>
                             <GridViewColumn Width="60" Header="Precio" DisplayMemberBinding="{Binding Path=art_precio}"/>
                             <GridViewColumn Width="60" Header="Stock" DisplayMemberBinding="{Binding Path=art_stock}"/>
                             <GridViewColumn Width="90" Header="Familia" DisplayMemberBinding="{Binding Path=fam_descripcion}"/>
                             <GridViewColumn Width="90" Header="Categoria" DisplayMemberBinding="{Binding Path=cat_descripcion}"/>
+                            <GridViewColumn Width="90" Header="Accion" >
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button Content="+"></Button>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
                         </GridView>
                     </ListView.View>
                 </ListView>
