--- a/Vistas/winAltaItemPedido.xaml
+++ b/Vistas/winAltaItemPedido.xaml
@@ -2,17 +2,25 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
+        xmlns:vistas="clr-namespace:Vistas"
+        xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
         Title="winAltaItemPedido" Height="auto" Width="600"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow"
         >
     <Window.Resources>
         <ObjectDataProvider
-            x:Key="Data_Articulo"
+            x:Key="LIST_ARTICULO"
             ObjectType="{x:Type svc:TrabajarArticulos}"
-            MethodName="TraerArticulo">
-        </ObjectDataProvider>
-        <ObjectDataProvider ObjectType="{x:Type svc:TrabajarArticulos}" MethodName="traerArticulos" x:Key="list_articulos"/>
+            MethodName="TraerArticulosColeccion"
+        />
+        <CollectionViewSource
+            x:Key="VISTA_ARTICULO"
+            Source="{StaticResource ResourceKey=LIST_ARTICULO}"
+        >
+        </CollectionViewSource>
+        
+        
     </Window.Resources>
-    
+
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
@@ -34,16 +42,16 @@
             <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Width="237" />
 
 
-            <ListView Name="lvwArticulos" Grid.Column="1" Height="200" Background="Black" ItemsSource="{Binding Source={StaticResource list_articulos}}" IsSynchronizedWithCurrentItem="True" Foreground="White" FontSize="10" HorizontalContentAlignment="Center" BorderBrush="Black" SelectionChanged="lvwArticulos_SelectionChanged">
+            <ListView Grid.Row="1" Name="lvwArticulos" Width="598" VerticalAlignment="Top" HorizontalAlignment="Center" Grid.Column="1" Height="auto" Background="Black" Foreground="White"  ItemsSource="{Binding Source= {StaticResource VISTA_ARTICULO}}" HorizontalContentAlignment="Center" IsSynchronizedWithCurrentItem="True"  BorderBrush="Black" SelectionChanged="lvwArticulos_SelectionChanged">
                 <ListView.View>
-                    <GridView x:Name="gvwArticulos">
-                        <GridViewColumn x:Name="id" Width="30" Header="ID" DisplayMemberBinding="{Binding Path=art_id}"/>
-                        <GridViewColumn Width="130" Header="Descripción" DisplayMemberBinding="{Binding Path=art_descripcion}"/>
-                        <GridViewColumn Width="40" Header="UM" DisplayMemberBinding="{Binding Path=UM_abreviatura}"/>
-                        <GridViewColumn Width="60" Header="Precio" DisplayMemberBinding="{Binding Path=art_precio}"/>
-                        <GridViewColumn Width="60" Header="Stock" DisplayMemberBinding="{Binding Path=art_stock}"/>
-                        <GridViewColumn Width="90" Header="Familia" DisplayMemberBinding="{Binding Path=fam_descripcion}"/>
-                        <GridViewColumn Width="90" Header="Categoria" DisplayMemberBinding="{Binding Path=cat_descripcion}"/>
+                    <GridView>
+                        <GridViewColumn Width="30" Header="ID" DisplayMemberBinding="{Binding Art_Id}"/>
+                        <GridViewColumn Width="150" Header="Descripcion" DisplayMemberBinding="{Binding Art_Descrip}"/>
+                        <GridViewColumn Width="60" Header="UM" DisplayMemberBinding="{Binding Unidad_Medida.Um_Descrip}"/>
+                        <GridViewColumn Width="60" Header="Precio" DisplayMemberBinding="{Binding Art_Precio}"/>
+                        <GridViewColumn Width="60" Header="Stock" DisplayMemberBinding="{Binding Art_Manejo_Stock}"/>
+                        <GridViewColumn Width="90" Header="Familia" DisplayMemberBinding="{Binding Familia.Fam_Descrip}"/>
+                        <GridViewColumn Width="90" Header="Categoria" DisplayMemberBinding="{Binding Categoria.Cat_Descrip}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
@@ -52,14 +60,14 @@
                 <Button Name="btnAdd" Content="+" Width="40" Click="btnAdd_Click"></Button>
                 <Button Name ="btn" Content="-" Width="40"></Button>
             </StackPanel>
-            
-            <ListView Name="lvwitems" Grid.Column="1" Height="200" Background="Black" Foreground="White" FontSize="10" HorizontalContentAlignment="Center" BorderBrush="Black">
+
+            <ListView  IsSynchronizedWithCurrentItem="True" Name="lvwitems" Grid.Column="1" Height="200" Background="Black" Foreground="White" FontSize="10" HorizontalContentAlignment="Center" BorderBrush="Black">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Width="50" Header="Cant."/>
-                        <GridViewColumn Width="200" Header="Descripción" />
-                        <GridViewColumn Width="60" Header="Precio"/>
-                        <GridViewColumn Width="90" Header="Importe"/>
+                        <GridViewColumn Width="50" Header="Cant." DisplayMemberBinding="{Binding Item_Ped_Cantidad}"/>
+                        <GridViewColumn Width="200" Header="Descripción" DisplayMemberBinding="{Binding Art_Descrip}" />
+                        <GridViewColumn Width="60" Header="Precio" DisplayMemberBinding="{Binding Item_Ped_Precio}"/>
+                        <GridViewColumn Width="90" Header="Importe" DisplayMemberBinding="{Binding Item_Ped_Importe}"/>
                     </GridView>
                 </ListView.View>
             </ListView>
