--- a/Vistas/winPedidos.xaml
+++ b/Vistas/winPedidos.xaml
@@ -1,9 +1,25 @@
 ﻿<Window x:Class="Vistas.winPedidos"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      
-        Title="winPedidos" Height="650" Width="auto"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
-   
+        xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
+        xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
+        Title="winPedidos" Height="650" Width="1000"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
+
+    <Window.Resources>
+        <ObjectDataProvider
+            x:Key="LIST_PEDIDO"
+            ObjectType="{x:Type svc:TrabajarPedido}"
+            MethodName="TraerPedidosColeccion"
+        />
+
+        <CollectionViewSource
+            x:Key="VISTA_PEDIDO"
+            Source="{StaticResource ResourceKey=LIST_PEDIDO}"
+
+        ></CollectionViewSource>
+
+    </Window.Resources>
+
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
@@ -91,26 +107,20 @@
                     </Grid>
                 </Grid>
 
-                <ListView Name="lvwPedidos" Grid.Column="1" Height="200" Background="Black" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black" Margin="2,193,23,168">
+                <ListView ItemsSource="{Binding Source={StaticResource VISTA_PEDIDO}}" Name="lvwPedidos" Grid.Column="1" Height="200" Background="Black" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black" Margin="2,193,23,168">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Width="30" Header="ID" DisplayMemberBinding="{Binding Path=ped_id}"/>
-                            <GridViewColumn Width="200" Header="Descripción" DisplayMemberBinding="{Binding Path=art_descripcion}"/>
-                            <GridViewColumn Width="40" Header="UM" DisplayMemberBinding="{Binding Path=UM_abreviatura}"/>
-                            <GridViewColumn Width="60" Header="Precio" DisplayMemberBinding="{Binding Path=art_precio}"/>
-                            <GridViewColumn Width="60" Header="Stock" DisplayMemberBinding="{Binding Path=art_stock}"/>
-                            <GridViewColumn Width="90" Header="Familia" DisplayMemberBinding="{Binding Path=fam_descripcion}"/>
-                            <GridViewColumn Width="90" Header="Categoria" DisplayMemberBinding="{Binding Path=cat_descripcion}"/>
-                            <GridViewColumn Width="90" Header="Accion" >
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <Button Content="+"></Button>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
+                            <GridViewColumn Width="30" Header="ID" DisplayMemberBinding="{Binding Ped_Id}"/>
+                            <GridViewColumn Width="150" Header="Fecha de Emisión" DisplayMemberBinding="{Binding Ped_Fecha_Emision}"/>
+                            <GridViewColumn Width="150" Header="Fecha de Entrega" DisplayMemberBinding="{Binding Ped_Fecha_Entrega}"/>
+                            <GridViewColumn Width="80" Header="Facturado" DisplayMemberBinding="{Binding Ped_Facturado}"/>
+                            <GridViewColumn Width="80" Header="Comensales" DisplayMemberBinding="{Binding Ped_Comensales}"/>
+                            <GridViewColumn Width="40" Header="Mesa" DisplayMemberBinding="{Binding Mesa.Mesa_Id}"/>                            
                         </GridView>
                     </ListView.View>
                 </ListView>
+                <Button Content="Añadir Ítems" Style="{StaticResource ButtonFormBlack}" Grid.Column="1" Height="23" HorizontalAlignment="Left" Margin="106,439,0,0" Name="button1" VerticalAlignment="Top" Click="btnAddItems_Click"/>
+                <Button Content="Ver Pedido" Style="{StaticResource ButtonFormBlack}" Width="100"  Grid.Column="1" Height="23" HorizontalAlignment="Left" Margin="354,471,0,0" Name="button2" VerticalAlignment="Top" />
             </Grid>
 
         </Grid>
