--- a/Vistas/winAltaItemPedido.xaml
+++ b/Vistas/winAltaItemPedido.xaml
@@ -2,7 +2,6 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        xmlns:vistas="clr-namespace:Vistas"
         xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
         Title="winAltaItemPedido" Height="auto" Width="600"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow"
         >
@@ -12,6 +11,7 @@
             ObjectType="{x:Type svc:TrabajarArticulos}"
             MethodName="TraerArticulosColeccion"
         />
+        
         <CollectionViewSource
             x:Key="VISTA_ARTICULO"
             Source="{StaticResource ResourceKey=LIST_ARTICULO}"
@@ -40,7 +40,7 @@
         <StackPanel Margin="10,50,10,10">
             <Label Name="lblNewArtTitle" Width="auto" Content="Nuevo Pedido" VerticalAlignment="Top" Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Height="50" />
             <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Width="237" />
-
+        
 
             <ListView Grid.Row="1" Name="lvwArticulos" Width="598" VerticalAlignment="Top" HorizontalAlignment="Center" Grid.Column="1" Height="auto" Background="Black" Foreground="White"  ItemsSource="{Binding Source= {StaticResource VISTA_ARTICULO}}" HorizontalContentAlignment="Center" IsSynchronizedWithCurrentItem="True"  BorderBrush="Black" SelectionChanged="lvwArticulos_SelectionChanged">
                 <ListView.View>
@@ -58,14 +58,49 @@
             
             <StackPanel Margin="20" Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button Name="btnAdd" Content="+" Width="40" Click="btnAdd_Click"></Button>
-                <Button Name ="btn" Content="-" Width="40"></Button>
+                <Button Name ="btnDel" Content="-" Width="40" Click="btnDel_Click"></Button>
             </StackPanel>
+            <Popup Name="Dialogo" StaysOpen="True" Placement="Center" MaxWidth="200">
+                <Grid>
+                    
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="200*"/>
+                        <RowDefinition Height="100*"/>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="45*"/>
+                            <ColumnDefinition Width="55*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="80*"/>
+                            <RowDefinition Height="30*"/>
+                        </Grid.RowDefinitions>
+
+                        <Label Name="lblCantidadTitle" Content="Cantidad"  Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Margin="94,23,90,59" />
+                        <Label Name="lblCantidad" Content="Ingrese Cantidad"  Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="77,72,69,33" Width="237" />
+
+                        <TextBox Name="txtCantidad" Grid.Row="1" Grid.Column="1"  Style="{StaticResource EstiloError}">
+                            
+                        </TextBox>
+
+                    
+
+
+
+                    <DockPanel Grid.Row="1">
+                        <Button Content="GUARDAR" Name="btnGuardarCant"  HorizontalAlignment="Center" Style="{StaticResource ButtonFormBlack}" Click="btnGuardarCant_Click"></Button>
+                    </DockPanel>
+                </Grid>
+
+    </Grid>
+    </Popup>
 
             <ListView  IsSynchronizedWithCurrentItem="True" Name="lvwitems" Grid.Column="1" Height="200" Background="Black" Foreground="White" FontSize="10" HorizontalContentAlignment="Center" BorderBrush="Black">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Width="50" Header="Cant." DisplayMemberBinding="{Binding Item_Ped_Cantidad}"/>
-                        <GridViewColumn Width="200" Header="Descripción" DisplayMemberBinding="{Binding Art_Descrip}" />
+                        <GridViewColumn Width="200" Header="Descripción" DisplayMemberBinding="{Binding Articulo.Art_Descrip}" />
                         <GridViewColumn Width="60" Header="Precio" DisplayMemberBinding="{Binding Item_Ped_Precio}"/>
                         <GridViewColumn Width="90" Header="Importe" DisplayMemberBinding="{Binding Item_Ped_Importe}"/>
                     </GridView>
