--- a/Vistas/winVistaPreviaPedido.xaml
+++ b/Vistas/winVistaPreviaPedido.xaml
@@ -1,42 +1,51 @@
 ﻿<Window x:Class="Vistas.winVistaPreviaPedido"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="winVistaPreviaPedido" Height="481" Width="322">
-
-    <FixedDocument>
+         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
+        Title="winVistaPreviaPedido" Height="400" Width="600"     WindowStartupLocation="CenterScreen" >
+    
+       <FixedDocument>
+          
         <PageContent>
+            
             <FixedPage>
-
-                <Grid>
-                    <TextBlock Name="txbEmpresa" Text="Holdem" HorizontalAlignment="Center" Margin="0,5,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="14" FontFamily="Consolas" />
-                    <TextBlock Name="txbDireccion" Text="Salta 731" HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Top" FontWeight="Bold" FontFamily="Consolas" />
-                    <TextBlock Name="txbTelefono" Text="3884132" HorizontalAlignment="Center" Margin="10,40,0,0" VerticalAlignment="Top" FontFamily="Consolas" />
-                    <TextBlock Name="txbEmail" Text="holde@email.com"  HorizontalAlignment="Center" Margin="10,60,0,0" VerticalAlignment="Top" FontFamily="Consolas" />
+            
+                    <Grid>
+        <StackPanel>
+            <TextBlock Name="txbEmpresa" Text="Holdem" Margin="0,0,0,0" FontWeight="Bold" FontSize="14" FontFamily="Consolas" Height="23" />
+            <TextBlock Name="txbDireccion" Text="Salta 731" Margin="0,0,0,0" FontWeight="Bold" FontFamily="Consolas" />
+            <TextBlock Name="txbTelefono" Text="3884132" Margin="0,0,0,0" FontFamily="Consolas" />
+            <TextBlock Name="txbEmail" Text="holde@email.com" Margin="0,0,0,0" FontFamily="Consolas" />
+        </StackPanel>
         <Label Name="lblNumeroPedido"  HorizontalAlignment="left" Margin="10,80,0,0" Content="NumeroPedido" VerticalAlignment="Top" FontFamily="Consolas" />
 
-        <TextBlock Name="txbNumeroPedido"  HorizontalAlignment="Right" Margin="0,90,157,0" VerticalAlignment="Top" FontFamily="Consolas" />
-        <Label Name="lblFechaEntrega" Margin="20,100,178,0" Content="Fecha y hora: " VerticalAlignment="Top" FontFamily="Consolas" />
-        <TextBlock Name="txbFechaEntrega"  HorizontalAlignment="Right" Margin="0,110,29,0"  VerticalAlignment="Top" FontFamily="Consolas" />
+            <TextBlock Name="txbNumeroPedido"  HorizontalAlignment="Right" Margin="0,90,473,0" VerticalAlignment="Top" FontFamily="Consolas" />
+            <Label Name="lblFechaEntrega" Margin="20,100,178,0" Content="Fecha y hora: " VerticalAlignment="Top" FontFamily="Consolas" />
+            <TextBlock Name="txbFechaEntrega"  HorizontalAlignment="Right" Margin="0,110,451,0"  VerticalAlignment="Top" FontFamily="Consolas" />
 
-        <Label Name="lblMesaNumero" HorizontalAlignment="Left" Margin="20,130,0,0" Content="Número de Mesa: " VerticalAlignment="Top" FontFamily="Consolas" />
+            <Label Name="lblMesaNumero" HorizontalAlignment="Left" Margin="20,130,0,0" Content="Número de Mesa: " VerticalAlignment="Top" FontFamily="Consolas" />
 
-        <TextBlock Name="txbMesaNumero" HorizontalAlignment="Right" Margin="0,140,136,0"  VerticalAlignment="Top" FontFamily="Consolas" />
-        <Label Name="lblMozo" HorizontalAlignment="Left" Margin="20,160,0,0" Content="Mozo:"  VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" />
+            <TextBlock Name="txbMesaNumero" HorizontalAlignment="Right" Margin="0,136,439,0"  VerticalAlignment="Top" FontFamily="Consolas" />
+            <Label Name="lblMozo" HorizontalAlignment="Left" Margin="20,160,0,0" Content="Mozo:"  VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" />
 
-        <TextBlock Name="txbMozo" HorizontalAlignment="Right" Margin="0,165,179,0" Text="Mozo"  VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" />
-        <ListView  IsSynchronizedWithCurrentItem="True" Name="lvwitems" Background="White" Foreground="Black" FontSize="10" HorizontalContentAlignment="Center" BorderBrush="Black" Margin="10,180,14,12">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Width="50" Header="Cant." DisplayMemberBinding="{Binding Item_Ped_Cantidad}"/>
-                    <GridViewColumn Width="200" Header="Descripción" DisplayMemberBinding="{Binding Articulo.Art_Descrip}" />
-                 </GridView>
-            </ListView.View>
-        </ListView>
+            <TextBlock Name="txbMozo" HorizontalAlignment="Right" Margin="0,165,179,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" />
+            <ListView  IsSynchronizedWithCurrentItem="True" Name="lvwitems" Background="White" Foreground="Black" FontSize="10" HorizontalContentAlignment="Center" BorderBrush="Black" Margin="12,180,14,71">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Width="50" Header="Cant." DisplayMemberBinding="{Binding Item_Ped_Cantidad}"/>
+                        <GridViewColumn Width="200" Header="Descripción" DisplayMemberBinding="{Binding Articulo.Art_Descrip}" />
+                         <GridViewColumn Width="200" Header="Precio" DisplayMemberBinding="{Binding Item_Ped_Precio}" />
+                                <GridViewColumn Width="200" Header="Importe" DisplayMemberBinding="{Binding Item_Ped_Importe}" />
+                            </GridView>
+                </ListView.View>
+            </ListView>
+        <TextBlock Name="txbTotal" HorizontalAlignment="Right" Margin="0,120,152,0"  VerticalAlignment="Top" FontFamily="Consolas" Height="14" Width="27" />
+        <Label Name="lblTotal" Content="Total: " FontFamily="Consolas" Margin="338,110,157,227" />
     </Grid>
 
-          </FixedPage>
+       </FixedPage>
+         
         </PageContent>
     </FixedDocument>
-
-
+        
 </Window>
