--- a/Vistas/winAcercaDe.xaml
+++ b/Vistas/winAcercaDe.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Vistas.winAcercaDe"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="winAcercaDe" WindowStyle="None" AllowsTransparency="True" ResizeMode="CanResizeWithGrip" Background="Transparent" Height="582" Width="500" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="582" MouseLeftButtonDown="moveWindow">
+        Title="winAcercaDe" WindowStyle="None" AllowsTransparency="True" ResizeMode="CanResizeWithGrip" Background="Transparent" Height="582" Width="500" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="582" MouseLeftButtonDown="moveWindow" AllowDrop="True" Drop="Window_Drop" Loaded="Window_Loaded">
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
@@ -23,7 +23,12 @@
                 <RowDefinition Height="80*"/>
                 <RowDefinition Height="20*"/>
             </Grid.RowDefinitions>
-            
+            <MediaElement Height="auto" HorizontalAlignment="Left" Margin="39,32,0,0" Name="mediaElement1" VerticalAlignment="Top" Width="auto" MediaOpened="mediaElement1_MediaOpened"/>
+            <Button Content="Play" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="39,19,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
+            <Button Content="Pausar" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="158,19,0,0" Name="button2" VerticalAlignment="Top" Width="75" Click="button2_Click" />
+            <Button Content="Reiniciar" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="251,19,0,0" Name="button3" VerticalAlignment="Top" Width="75" Click="button3_Click" />
+            <Slider Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="6,71,0,0" Name="slider1" VerticalAlignment="Top" Width="100" ValueChanged="slider1_ValueChanged" />
+            <Slider Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="367,18,0,0" Name="slider2" VerticalAlignment="Top" Width="100" LargeChange="0.1" Maximum="1" SmallChange="0.01" Value="1" ValueChanged="slider2_ValueChanged" />
         </Grid>
     </Grid>
 </Window>
