--- a/Vistas/winAcercaDe.xaml
+++ b/Vistas/winAcercaDe.xaml
@@ -23,7 +23,7 @@
                 <RowDefinition Height="80*"/>
                 <RowDefinition Height="20*"/>
             </Grid.RowDefinitions>
-            <MediaElement Height="auto" HorizontalAlignment="Left" Margin="39,32,0,0" Name="mediaElement1" VerticalAlignment="Top" Width="auto" MediaOpened="mediaElement1_MediaOpened"/>
+            <MediaElement Height="auto" HorizontalAlignment="center" Name="mediaElement1" VerticalAlignment="Top" Width="auto" MediaOpened="mediaElement1_MediaOpened"/>
             <Button Content="Play" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="39,19,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
             <Button Content="Pausar" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="158,19,0,0" Name="button2" VerticalAlignment="Top" Width="75" Click="button2_Click" />
             <Button Content="Reiniciar" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="251,19,0,0" Name="button3" VerticalAlignment="Top" Width="75" Click="button3_Click" />
