--- a/Vistas/winStartupScreen.xaml
+++ b/Vistas/winStartupScreen.xaml
@@ -3,6 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
            Title="SplashScreen" Height="247" Width="500" Loaded="Window_Loaded" WindowStyle="None" WindowStartupLocation="CenterScreen" AllowsTransparency="True" Background="Transparent">
     <Grid>
-        <Image Height="196" HorizontalAlignment="Left" Margin="12,12,0,0" Name="imgSplash" Stretch="Fill" VerticalAlignment="Top" Width="461" Source="file:///D:/-N-/Trabajos/3°%20APU/LPOO%20II/TRABAJO%20PRÁCTICO/LPOOII-Grupo2/Vistas/Images/splash.png" />
+        <Image Height="196" HorizontalAlignment="Left" Margin="12,12,0,0" Name="imgSplash" Stretch="Fill" VerticalAlignment="Top" Width="461" Source="/Vistas;component/Images/splash.png" />
     </Grid>
 </Window>
