--- a/Vistas/ABMArticulos.xaml
+++ b/Vistas/ABMArticulos.xaml
@@ -55,7 +55,7 @@
                 </StackPanel>
             </Grid>
 
-            <Grid Name="grdArticulos" Grid.Row="1" Margin="80,20" Background="#262627">
+            <Grid Name="grdArticulos" Grid.Row="1" Margin="17,19,143,21" Background="#262627">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
@@ -86,6 +86,7 @@
                 
             
             </Grid>
+            <Image Grid.Row="1" Height="75" HorizontalAlignment="Left" Margin="441,86,0,0" Name="imgArticulo" Source="{Binding Art_Imagen}" Stretch="Fill" VerticalAlignment="Top" Width="126" />
         </Grid>
 
     </Grid>
