--- a/Vistas/Styles/Dictionary1.xaml
+++ b/Vistas/Styles/Dictionary1.xaml
@@ -83,5 +83,29 @@
             </Setter>
         </Style.Setters>
     </Style>
-    
+
+
+
+
+    <Style TargetType="{x:Type Button}" x:Key="BotonAgregar">
+        <Style.Setters>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Button Background="NavajoWhite"  Margin="10,5">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="80*" />
+                                    <RowDefinition Height="220*" />
+                                </Grid.RowDefinitions>
+                                <TextBlock FontFamily="Arial" Foreground="Black" Height="Auto" HorizontalAlignment="Center" Name="textBlock1" Text="{TemplateBinding Content}" FontSize="15" VerticalAlignment="Stretch"/>
+                                <Image Grid.Row="1" Name="image1" Source="/Vistas;component/Images/Agregar.png"/>
+                            </Grid>
+                        </Button>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style.Setters>
+    </Style>
+
 </ResourceDictionary>
