--- a/Vistas/App.xaml
+++ b/Vistas/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Vistas.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="winLogin.xaml">
+             StartupUri="winStartupScreen.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
