--- a/Vistas/winLogin.xaml
+++ b/Vistas/winLogin.xaml
@@ -28,7 +28,9 @@
                 <RowDefinition Height="10*" />
                 <RowDefinition Height="80*" />
                 <RowDefinition Height="53*" />
+                <RowDefinition Height="53*" />
                 <RowDefinition Height="10*" />
+               
             </Grid.RowDefinitions>
 
             <Image Grid.Row="0" Margin="30" Name="imgLogo" Height="auto" Width="auto" Source="/Vistas;component/Images/holdemlogo.png" />
@@ -44,7 +46,8 @@
             <PasswordBox Grid.Row="5" Name="pwdPassLogin" FontSize="16" Foreground="#EEEEEE" BorderBrush="#ffd46f" Height="35" Width="240" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Black" GotFocus="PwdGotFocus" LostFocus="PwdLostFocus" />
             -->
             
-            <Button Grid.Row="5" Content="Iniciar Sesión" Style="{StaticResource ButtonFormBlack}" Click="login"/>
+            <Button Grid.Row="5" Content="Iniciar Sesión" Style="{StaticResource ButtonFormBlack}" Click="login" Margin="140,18,140,12" />
+            <Button Grid.Row="6" Content="Acerca de Nosotros" Style="{StaticResource ButtonFormBlack}"  Margin="140,18,140,12" Click="acercaDe" />
 
         </Grid>
     </Grid>
